--- a/templates/eventplanner.html
+++ b/templates/eventplanner.html
@@ -7,12 +7,19 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='eventplanner.css') }}">
 </head>
 <body>
-    <header class ="taskbar">
+    <header class="taskbar">
         <h1 id="maintitle">Luca's Event Planner</h1>
     </header>
-    <div class="mainboxes">
-        <div class="calendarbox"></div>
-        <div class="eventaddbox"></div>
+    <div class="main-Boxes">
+        <div class="calendar-Box">
+            <h1 class="calendar-title">Calendar</h1>
+        </div>
+        <div class="eventadd-Box">
+            <h1 class="event-title">Event Add</h1>
+        </div>
+    </div>
+    <div class="weather-Box">
+        <h2 class="weather-title"> Weather</h2>
     </div>
 </body>
 </html>
