--- a/templates/eventplanner.html
+++ b/templates/eventplanner.html
@@ -38,7 +38,7 @@
         </div>
         <div class="eventadd-Box">
             <h1 class="event-title">Event Add</h1>
-            <form action="/eventplanner" method="POST>
+            <form action="/eventplanner" method="POST">
                 <div class="mb-3">
                     <label for="title" class="form-label">Event Title</label>
                     <input type="text" class="form-control" name="title" id="title">
